<resources>
    <string name="app_name">E Commerce Club</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="power_by_raqamyat">برعاية شركة رقميات</string>
    <string name="start_training">ابدأ التدريب مجانا</string>
    <string name="login">تسجيل دخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="google_login">تسجيل الدخول عبر جوجل</string>
    <string name="test">888888</string>
    <string name="checkbox_message">يجيب الموافقة على شروط الاستخدام</string>
    <string name="get_certificate_now">احصل على الشهادة الأن</string>
    <string name="request_another_try">طلب محاولة اخرى</string>
    <string name="you_pass_the_exam">لقد نجحت في تجاوز الاختبار</string>
    <string name="back">العودة</string>
    <string name="ask_for_more_try">طلب محاولة استثنائية</string>
    <string name="no_more_try">لم يتبقى أمامك محاولات لاعادة الاختبار</string>
    <string name="num_of_wrong_answers">عدد الاجابات الخاطئة</string>
    <string name="num_of_correct_answers">عدد الاجابات الصحيحة</string>
    <string name="your_result">نتيجك</string>
    <string name="exam_pass_fail">لم تنجح في تجاوز الاختبار</string>
    <string name="exam_result">نتيجة الإختبار</string>
    <string name="previous_question">السؤال السابق</string>
    <string name="next_question">السؤال التالي</string>
    <string name="time_left">الوقت المتبقي</string>
    <string name="exam_title">إمتحان الحصول على الشهادة</string>
    <string name="start_exam">ابدأ الإختبار الآن</string>
    <string name="lesson_title">مبادئ التجارة الإلكترونية</string>
    <string name="about_exam">نبذه عن الإختبار</string>
    <string name="send">إرسال</string>
    <string name="write_question">اكتب سؤالك</string>
    <string name="Obtaining_certificate">الحصول على الشهادة</string>
    <string name="previous_lesson">الدرس السابق</string>
    <string name="ask">اسال</string>
    <string name="no_questions">لا يوجد اسئلة حول هذا الدرس</string>
    <string name="follow">follow in</string>
    <string name="next_lesson">الدرس التالي</string>
    <string name="questions_about_lesson">أسئلة حول الدرس</string>
    <string name="about_lesson">نبذه عن الدرس</string>
    <string name="download_lesson"><u>تحميل الملخص</u></string>
    <string name="by">بواسطة</string>
    <string name="articles">مقالات</string>
    <string name="continue_lessons">استمر من حيث توقفت</string>
    <string name="complete_your_lessons">أكمل دروسك بحماس</string>
    <string name="home_course_title">مبادئ التجارة الإلكترونية</string>
    <string name="lessons">الدروس</string>
    <string name="certificate_message">لم تحصل علي اى شهادة حتى الان</string>
    <string name="confirm_change_password">تأكيد كلمة المرور الجديدة</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="old_password">كلمة المرور الحالية</string>
    <string name="save">حفظ</string>
    <string name="certificates">الشهادات</string>
    <string name="account_info">المعلومات الرئيسية</string>
    <string name="my_account">حسابي</string>
    <string name="hello">مرحبا</string>
    <string name="wrong_code">الكود الذي ادخلته خطاء</string>
    <string name="enter_valid_email">من فضلك ادخل بريد صالح</string>
    <string name="enter_valid_password">من فضلك ادخل رقم سري صالح</string>
    <string name="enter_same_password">كلمة المرور غير متطابقة</string>
    <string name="enter_valid_mobile">من فضلك ادخل رقم هاتف صالح</string>
    <string name="enter_valid_name">من فضلك ادخل اسم صالح</string>
    <string name="enter_valid_job">من فضلك ادخل اسم وظيفة صالح</string>
    <string name="choose_strong_password">اختر كلمة سر قوية</string>
    <string name="create_new_password">أنشئ كلمة سر جديدة</string>
    <string name="code_you_have_receive">الرمز المتغير</string>
    <string name="enter_code">من فضلك أدخل الرمز المتغير المرسل إلى</string>
    <string name="next">التالى</string>
    <string name="forget_password_ex">لا تقلق، يمكنك إعادة ضبط كلمة المرور المسجلة في حسابك وتسجيل الدخول لنادي التجارة الإلكترونية باتباع الخطوات التالية</string>
    <string name="did_you_forget_password">هل نسيت كلمة السر الخاصة بك؟</string>
    <string name="phone_number">رقم التليفون</string>
    <string name="job">المهنة</string>
    <string name="name">الاسم</string>
    <string name="agree_terms"><u>أوافق على شروط الاستخدام</u></string>
    <string name="no_account"><u>ليس لديك حساب</u></string>
    <string name="forget_password"><u>نسيت كلمة السر؟</u></string>
    <string name="forget_password2">نسيت كلمة السر</string>
    <string name="yes">نعم</string>
    <string name="cancel">إلغاء</string>
    <string name="error">خطاء</string>
    <string name="alert">تنبية</string>
    <string name="error_message">حدث خطاء ما</string>

</resources>