<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:layoutDirection="rtl"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backbtn_icon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_weight="1"
            android:fontFamily="@font/janna_bold"
            android:gravity="center"
            android:text="@string/forget_password2"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/janna_bold"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/did_you_forget_password"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#929292"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/forget_password_ex"
        android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/email" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="7dp"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                app:cardBackgroundColor="#F8F8F8"
                app:cardCornerRadius="15dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="8dp"
                    android:textColorHint="@color/hint_color"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="mymail@gmail.com"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="83dp"
                    android:minHeight="36dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@color/purple"
                    app:cornerRadius="35dp"
                    app:iconGravity="textStart" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>