<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    tools:layoutDirection="rtl">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="83dp"
            android:minHeight="36dp"
            android:textSize="18sp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/purple"
            app:cornerRadius="35dp"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="7dp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textSize="18sp"
            android:elevation="0dp"
            app:elevation="0dp"
            android:shadowColor="@color/purple"
            android:minWidth="83dp"
            android:minHeight="36dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="35dp"
            app:iconGravity="textStart"
            app:strokeColor="@color/purple"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="7dp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="83dp"
            android:minHeight="36dp"
            android:text="@string/google_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:backgroundTint="@color/google_color"
            app:cornerRadius="35dp"
            app:icon="@drawable/icon_ionic_logo_google"
            app:iconGravity="textStart"
            app:iconPadding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_by_raqamyat" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/raqamyat_logo" />
    </LinearLayout>

</LinearLayout>